--- a/package.json
+++ b/package.json
@@ -1,11 +1,34 @@
 {
+  "name": "seedle",
+  "version": "1.0.0",
+  "description": "A platform for plant enthusiasts.",
+  "main": "index.js",
+  "scripts": {
+    "start": "concurrently \"npm --prefix server start\" \"npm --prefix client start\"",
+    "install": "npm install --prefix server && npm install --prefix client",
+    "build": "npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ali012210/Seedle.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ali012210/Seedle/issues"
+  },
+  "homepage": "https://github.com/ali012210/Seedle#readme"
 }
